# tapl

./: Cargo.toml  README.md
arith/: Cargo.toml
arith/src/: arith.rs  lib.rs  parser.rs
fulluntyped/: Cargo.toml
fulluntyped/src/: builtin.rs  core.rs  lexer.rs  parser.rs  syntax.rs
simplebool/: Cargo.toml
simplebool/src/: core.rs  lib.rs  parser.rs
src/: main.rs
tyarith/: Cargo.toml
tyarith/src/: lib.rs  parser.rs  tyarith.rs
untyped/: Cargo.toml
untyped/src/: core.rs  lib.rs  parser.rs
