[package]
name = "tapl"
version = "0.1.0"
authors = ["V4kst1z <dcydane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arith = {path = "./arith", version = "0.1.0"}
untyped = {path = "./untyped", version = "0.1.0"}
fulluntyped = {path = "./fulluntyped", version = "0.1.0"}
tyarith = {path = "./tyarith", version = "0.1.0"}
simplebool = {path = "./simplebool", version = "0.1.0"}